Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5888

Parquet scanner does not free local allocations for min/max and dictionary filters

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.9.0, Impala 2.10.0
    • Impala 2.11.0
    • Backend
    • None

    Description

      This is the same issues as IMPALA-5885, but for the other conjuncts. I think min/max conjuncts are unlikely to be problematic now since they're evaluated once per row group, but we could accumulate a lot of memory from dictionary conjuncts.

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: