IMPALA-5888: free other local allocations in Parquet

Testing:
I wasn't able to produce any abnormal memory consumption from dictionary
or min/max filters so haven't included a regression test.

Change-Id: I7792552510b54aa95044e44218e3351a36d6f9a8
Reviewed-on: http://gerrit.cloudera.org:8080/7933
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins